# cardamom-alignments

./: .gitignore  README.md  symmetric_alignments_train_en-pt.pharaoh
alignments-cli/: README.md  mkdocs.yml  pyproject.toml
alignments-cli/alignments_cli/: __init__.py  align.py
alignments-cli/docs/: index.md
alignments-clients/poetry-client/: client.py  pyproject.toml
alignments-pipelines/: pyproject.toml
alignments-pipelines/alignment_pipelines/: __init__.py  awesomeAlignPipeline.py  calculate_metrics.py  simAlignPipeline.py
alignments-pipelines/docs/: simalign.md
clients/poetry-client/: XL-WA-benchmark.py  XL-WA_awesomealign_basic_use.py  XL-WA_simalign_basic_use.py  pyproject.toml
clients/poetry-client/outputs/XL-WA/data/bg/: dev.tsv-bert-bpe-inter.tsv  dev.tsv-bert-bpe-itermax.tsv  dev.tsv-bert-bpe-mwmf.tsv  test.tsv-bert-bpe-inter.tsv  test.tsv-bert-bpe-mwmf.tsv  test.tsv-simalign-bert-bpe-itermax.tsv  train.tsv-bert-bpe-itermax.tsv  train.tsv-bert-bpe-mwmf.tsv  train.tsv-simalign-bert-bpe-inter.tsv
clients/poetry-client/outputs/XL-WA/data/da/: dev.tsv-simalign-bert-bpe-inter.tsv  dev.tsv-simalign-bert-bpe-itermax.tsv  dev.tsv-simalign-bert-bpe-mwmf.tsv  test.tsv-simalign-bert-bpe-inter.tsv  test.tsv-simalign-bert-bpe-itermax.tsv  test.tsv-simalign-bert-bpe-mwmf.tsv  train.tsv-simalign-bert-bpe-inter.tsv  train.tsv-simalign-bert-bpe-itermax.tsv  train.tsv-simalign-bert-bpe-mwmf.tsv
clients/poetry-client/outputs/XL-WA/data/es/: dev.tsv-simalign-bert-bpe-inter.tsv  dev.tsv-simalign-bert-bpe-itermax.tsv  dev.tsv-simalign-bert-bpe-mwmf.tsv  test.tsv-bert-bpe-inter.tsv  test.tsv-simalign-bert-bpe-itermax.tsv  test.tsv-simalign-bert-bpe-mwmf.tsv  train.tsv-simalign-bert-bpe-inter.tsv  train.tsv-simalign-bert-bpe-itermax.tsv  train.tsv-simalign-bert-bpe-mwmf.tsv
clients/poetry-client/outputs/XL-WA/data/et/: dev.tsv-simalign-bert-bpe-inter.tsv  dev.tsv-simalign-bert-bpe-itermax.tsv  dev.tsv-simalign-bert-bpe-mwmf.tsv  test.tsv-simalign-bert-bpe-inter.tsv  test.tsv-simalign-bert-bpe-itermax.tsv  test.tsv-simalign-bert-bpe-mwmf.tsv  (+3 more)
pipelines/: pyproject.toml
(+55 files in other folders)
