[tool.poetry]
name = "poetry-client"
version = "0.1.0"
description = ""
authors = ["bernardo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alignments-cli = {path = "../../alignments-pipelines"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
